--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
     "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
